have a more advanced swagger docs
