# backend/response/response.go
@@ -1,0 +1,11 @@
+package response
+
+import (
+	"time"
+)
+
+type APIError struct {
+	ErrorCode    int
+	ErrorMessage string
+	CreatedAt    time.Time
+}
